updated swagger schema
